src/task11_Microservices/Task11_12_k8s_2-3/manifest_1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  nginx-multitool
  template:
    metadata:
      labels:
        app:  nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 8080
            name: web
            protocol: TCP
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8081
            name: web
            protocol: TCP


---

apiVersion: v1
kind: Service
metadata:
  name: busybox-multitool-svc
spec:
  selector:
    app: busybox-multitool
  ports:
    - name: web
      port: 80
