src/task11_Microservices/Task11_12_k8s_2-3/manifest_3.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-multitool-deployment
  labels:
    app: nginx-multitool
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  nginx-multitool
  template:
    metadata:
      labels:
        app:  nginx-multitool
    spec:
      containers:
      - name: nginx
        image: nginx:1.14.2
        ports:
          - containerPort: 8080
            name: web-nginx
            protocol: TCP
        volumeMounts:
          - name: nginx-index
            mountPath: /usr/share/nginx/html/
      - name: multitool
        image: wbitt/network-multitool
        ports:
          - containerPort: 8081
            name: web-multitool
            protocol: TCP
      volumes:
        - name: nginx-index
          configMap:
            name: my-configmap
        - name: secret-volume
          secret:
            secretName: my-app-secret-tls


---

apiVersion: v1
kind: Service
metadata:
  name: busybox-multitool-svc
spec:
  selector:
    app: busybox-multitool
  ports:
    - name: web-nginx
      port: 443
    - name: web-multitool
      port: 80

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: http-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /nginx
        pathType: Prefix
        backend:
          service:
            name: busybox-multitool
            port:
              name: web-nginx
  tls:
    - hosts:
      - nginx-multitool
      secretName: my-app-secret-tls
